# terracota

./: .gitignore  LICENSE  README.md
docs/: equipe.txt  historia.txt
terracota/: CMakeLists.txt  Makefile  Makefile.win  Procfile  Vagrantfile  map.h  package.json  setup.sh  terracota
terracota/config/: install.sh  run.sh
terracota/engine/include/: image.h  input.h
terracota/include/: animation.h  background.h  bat.h  battle_manager.h  button.h  character.h  dialogue.h  dialogue_manager.h  enemy.h  enime.h  front_end.h  frontend.h  gamecontrol.h  gameflow.h  gameover.h  inti.h  killa.h  layer.h  life.h  map.h  map1.h  map2.h  map_manager.h  mapmanager.h  menu.h  npc.h  options.h  settings.h  sprite.h  stage.h  terracota.h  terracota_front_end.h  terracota_game.h  titlescreen.h  ui.h  ui_interface.h
terracota/provisioning/: terracota.yml
terracota/res/: settings.conf
terracota/res/conf/: dialogue.conf  map1.conf  map2.conf  map3.conf  map4.conf  settings.conf
terracota/res/images/NPCs/: author_npc.txt
terracota/res/images/bosses/: author_boss.txt
terracota/src/: animation.cpp  background.cpp  bat.cpp  battle_manager.cpp  button.cpp  character.cpp  character_event.cpp  dialogue.cpp  dialogue_manager.cpp  enemy.cpp  enime.cpp  front_end.cpp  frontend.cpp  gamecontrol.cpp  gameflow.cpp  gameover.cpp  inti.cpp  killa.cpp  layer.cpp  life.cpp  main.cpp  map.cpp  map1.cpp  map2.cpp  map_manager.cpp  menu.cpp  npc.cpp  options.cpp  settings.cpp  sprite.cpp  stage.cpp  terracota.cpp  terracota_front_end.cpp  terracota_game.cpp  titlescreen.cpp  ui.cpp
(+23 files in other folders)
